Tue Oct 07 10:04:59 2003  George Lebl <jirka@5z.com>

	* configure.in, Makefile.am, src/Makefile.am, src/plugin.c,
	  src/plugread.c, src/genius.c: Kill gnome dependency in
	  the command line genius by using ve-config and
	  vicious-extensions.  Only codewise though, it is still linked
	  to gnome.  Though that should not be too hard to fix and
	  non-gnome non-gui builds may again be possible.  Not to mention
	  that startup of non-gui code is faster meaning faster testing
	  and less other whacky code to screw up valgrind runs etc...

	* src/mpwrap.c: fix corruption with respect to extra types when
	  rop == op1 or op2 and reenable the no_convert extra type
	  optimization.  Also fixes a leak of gmp internal data on all
	  divisions and gcd and mod operations.

Mon Oct 06 18:02:07 2003  George Lebl <jirka@5z.com>

	* src/mpwrap.c: revert the change (sort of) something is wrong,
	  and I don't have time to investigate

Mon Oct 06 17:47:26 2003  George Lebl <jirka@5z.com>

	* src/mpwrap.c: during some operations we were unnecessairly
	  converting the rop only to wipe it, so add a no_convert version
	  of the extra type function (affected are division and mod in case
	  rop was of a different type)

Mon Oct 06 17:00:38 2003  George Lebl <jirka@5z.com>

	* lib/misc/misc.gel: add Identity function

	* lib/calculus/differentiation.gel, lib/calculus/limits.gel,
	  lib/functions/numerical.gel: Tolerances should be floats really

	* configure.in, lib/Makefile.am, lib/sets/Makefile.am,
	  lib/sets/basic.gel, lib/misc/misc.gel:  Move the set theoretic
	  functions from misc to new dir called 'sets'

	* lib/functions/numerical.gel: add aliases Sign and AbsoluteValue

	* src/calc.c, src/compil.c, src/dict.h, src/eval.c, src/funclib.c,
	  src/graphing.c, src/matrixw.h, src/mpwrap.[ch], src/mpzextra.c,
	  src/structs.h:  Some minor cleanup all over the place, plus 
	  more reordering and other struct tricks to reduce footprint of
	  common structures even further.
