@@ -131,13 +131,15 @@ static int fromrl;
 
 static int forzvt[2];
 
+static GIOChannel *forzvt0_ch;
+
+
 static char *torlfifo = NULL;
 static char *fromrlfifo = NULL;
 
 static char *arg0 = NULL;
 
-static void feed_to_zvt (gpointer data, gint source,
-			 GdkInputCondition condition);
+static gboolean feed_to_zvt (GIOChannel *source, GIOCondition condition, gpointer data);
 static void new_callback (GtkWidget *menu_item, gpointer data);
 static void open_callback (GtkWidget *w);
 static void save_callback (GtkWidget *w);
@@ -171,11 +173,11 @@ static GnomeUIInfo file_menu[] = {
 #define FILE_SAVE_AS_ITEM 3
 	GNOMEUIINFO_MENU_SAVE_AS_ITEM (save_as_callback,NULL),
 #define FILE_RELOAD_ITEM 4
-	GNOMEUIINFO_ITEM_STOCK(N_("_Reload From Disk"),N_("Reload the selected program from disk"), reload_cb, GNOME_STOCK_MENU_REVERT),
+	GNOMEUIINFO_ITEM_STOCK(N_("_Reload From Disk"),N_("Reload the selected program from disk"), reload_cb, GTK_STOCK_REVERT_TO_SAVED),
 #define FILE_CLOSE_ITEM 5
 	GNOMEUIINFO_MENU_CLOSE_ITEM (close_callback, NULL),
 	GNOMEUIINFO_SEPARATOR,
-	GNOMEUIINFO_ITEM_STOCK(N_("_Load and Run"),N_("Load and execute a file in genius"), load_cb, GNOME_STOCK_MENU_OPEN),
+	GNOMEUIINFO_ITEM_STOCK(N_("_Load and Run"),N_("Load and execute a file in genius"), load_cb, GTK_STOCK_OPEN),
 	GNOMEUIINFO_SEPARATOR,
 	GNOMEUIINFO_MENU_EXIT_ITEM (quitapp,NULL),
 	GNOMEUIINFO_END,
@@ -191,19 +193,19 @@ static GnomeUIInfo edit_menu[] = {
 	GNOMEUIINFO_ITEM_STOCK(N_("Copy Answer As Plain _Text"),
 			       N_("Copy last answer into the clipboard in plain text"),
 			       copy_as_plain,
-			       GNOME_STOCK_MENU_COPY),
+			       GTK_STOCK_COPY),
 	GNOMEUIINFO_ITEM_STOCK(N_("Copy Answer As _LaTeX"),
 			       N_("Copy last answer into the clipboard as LaTeX"),
 			       copy_as_latex,
-			       GNOME_STOCK_MENU_COPY),
+			       GTK_STOCK_COPY),
 	GNOMEUIINFO_ITEM_STOCK(N_("Copy Answer As _MathML"),
 			       N_("Copy last answer into the clipboard as MathML"),
 			       copy_as_mathml,
-			       GNOME_STOCK_MENU_COPY),
+			       GTK_STOCK_COPY),
 	GNOMEUIINFO_ITEM_STOCK(N_("Copy Answer As T_roff"),
 			       N_("Copy last answer into the clipboard as Troff eqn"),
 			       copy_as_troff,
-			       GNOME_STOCK_MENU_COPY),
+			       GTK_STOCK_COPY),
 	GNOMEUIINFO_END,
 };
 
@@ -215,7 +217,7 @@ static GnomeUIInfo settings_menu[] = {
 static GnomeUIInfo calc_menu[] = {  
 #define CALC_RUN_ITEM 0
 	GNOMEUIINFO_ITEM_STOCK(N_("_Run"),N_("Run current program"),run_program, GTK_STOCK_EXECUTE),
-	GNOMEUIINFO_ITEM_STOCK(N_("_Interrupt"),N_("Interrupt current calculation"),genius_interrupt_calc,GNOME_STOCK_MENU_STOP),
+	GNOMEUIINFO_ITEM_STOCK(N_("_Interrupt"),N_("Interrupt current calculation"),genius_interrupt_calc,GTK_STOCK_STOP),
 	GNOMEUIINFO_END,
 };
 
@@ -257,11 +259,11 @@ static GnomeUIInfo genius_menu[] = {
 
 /* toolbar */
 static GnomeUIInfo toolbar[] = {
-	GNOMEUIINFO_ITEM_STOCK(N_("Interrupt"),N_("Interrupt current calculation"),genius_interrupt_calc,GNOME_STOCK_PIXMAP_STOP),
+	GNOMEUIINFO_ITEM_STOCK(N_("Interrupt"),N_("Interrupt current calculation"),genius_interrupt_calc,GTK_STOCK_STOP),
 #define TOOLBAR_RUN_ITEM 1
 	GNOMEUIINFO_ITEM_STOCK(N_("Run"),N_("Run current program"),run_program, GTK_STOCK_EXECUTE),
-	GNOMEUIINFO_ITEM_STOCK(N_("Open"),N_("Open a GEL file for running"), open_callback, GNOME_STOCK_PIXMAP_OPEN),
-	GNOMEUIINFO_ITEM_STOCK(N_("Exit"),N_("Exit genius"), quitapp, GNOME_STOCK_PIXMAP_EXIT),
+	GNOMEUIINFO_ITEM_STOCK(N_("Open"),N_("Open a GEL file for running"), open_callback, GTK_STOCK_OPEN),
+	GNOMEUIINFO_ITEM_STOCK(N_("Exit"),N_("Exit genius"), quitapp, GTK_STOCK_QUIT),
 	GNOMEUIINFO_END,
 };
 
@@ -360,9 +362,9 @@ printout_error_num_and_reset(void)
 	if(cursetup.error_box) {
 		if(errors) {
 			if(errors_printed-curstate.max_errors > 0) {
-				g_string_sprintfa(errors,
-						  _("\nToo many errors! (%d followed)"),
-						  errors_printed-curstate.max_errors);
+				g_string_append_printf (errors,
+							_("\nToo many errors! (%d followed)"),
+							errors_printed - curstate.max_errors);
 			}
 			geniusbox (TRUE, TRUE, errors->str);
 			g_string_free(errors,TRUE);
@@ -805,7 +807,7 @@ setup_calc(GtkWidget *widget, gpointer data)
 			    notebook, TRUE, TRUE, 0);
 	
 	mainbox = gtk_vbox_new(FALSE, GNOME_PAD);
-	gtk_container_border_width(GTK_CONTAINER(mainbox),GNOME_PAD);
+	gtk_container_set_border_width(GTK_CONTAINER(mainbox),GNOME_PAD);
 	gtk_notebook_append_page (GTK_NOTEBOOK (notebook),
 				  mainbox,
 				  gtk_label_new(_("Output")));
@@ -814,7 +816,7 @@ setup_calc(GtkWidget *widget, gpointer data)
 	frame=gtk_frame_new(_("Number/Expression output options"));
 	gtk_box_pack_start(GTK_BOX(mainbox),frame,FALSE,FALSE,0);
 	box=gtk_vbox_new(FALSE,GNOME_PAD);
-	gtk_container_border_width(GTK_CONTAINER(box),GNOME_PAD);
+	gtk_container_set_border_width(GTK_CONTAINER(box),GNOME_PAD);
 	gtk_container_add(GTK_CONTAINER(frame),box);
 
 
@@ -835,7 +837,7 @@ setup_calc(GtkWidget *widget, gpointer data)
 					   GTK_UPDATE_ALWAYS);
 	gtk_spin_button_set_snap_to_ticks(GTK_SPIN_BUTTON(w),
 					  TRUE);
-	gtk_widget_set_usize(w,80,0);
+	gtk_widget_set_size_request (w, 80, 0);
 	gtk_box_pack_start(GTK_BOX(b),w,FALSE,FALSE,0);
 	g_signal_connect (G_OBJECT (adj), "value_changed",
 			  G_CALLBACK (intspincb), &tmpstate.max_digits);
@@ -843,24 +845,24 @@ setup_calc(GtkWidget *widget, gpointer data)
 
 	w=gtk_check_button_new_with_label(_("Results as floats"));
 	gtk_box_pack_start(GTK_BOX(box),w,FALSE,FALSE,0);
-	gtk_toggle_button_set_state(GTK_TOGGLE_BUTTON(w), 
-				    tmpstate.results_as_floats);
+	gtk_toggle_button_set_active (GTK_TOGGLE_BUTTON (w), 
+				      tmpstate.results_as_floats);
 	g_signal_connect (G_OBJECT (w), "toggled",
 			  G_CALLBACK (optioncb),
 			  (gpointer)&tmpstate.results_as_floats);
 	
 	w=gtk_check_button_new_with_label(_("Floats in scientific notation"));
 	gtk_box_pack_start(GTK_BOX(box),w,FALSE,FALSE,0);
-	gtk_toggle_button_set_state(GTK_TOGGLE_BUTTON(w), 
-				    tmpstate.scientific_notation);
+	gtk_toggle_button_set_active (GTK_TOGGLE_BUTTON (w), 
+				      tmpstate.scientific_notation);
 	g_signal_connect (G_OBJECT (w), "toggled",
 			  G_CALLBACK (optioncb),
 			  (gpointer)&tmpstate.scientific_notation);
 
 	w=gtk_check_button_new_with_label(_("Always print full expressions"));
 	gtk_box_pack_start(GTK_BOX(box),w,FALSE,FALSE,0);
-	gtk_toggle_button_set_state(GTK_TOGGLE_BUTTON(w), 
-				    tmpstate.full_expressions);
+	gtk_toggle_button_set_active (GTK_TOGGLE_BUTTON (w), 
+				      tmpstate.full_expressions);
 	g_signal_connect (G_OBJECT (w), "toggled",
 			  G_CALLBACK (optioncb),
 			  (gpointer)&tmpstate.full_expressions);
@@ -871,21 +873,21 @@ setup_calc(GtkWidget *widget, gpointer data)
 	box=gtk_vbox_new(FALSE,GNOME_PAD);
 	gtk_container_add(GTK_CONTAINER(frame),box);
 
-	gtk_container_border_width(GTK_CONTAINER(box),GNOME_PAD);
+	gtk_container_set_border_width(GTK_CONTAINER(box),GNOME_PAD);
 	
 
 	w=gtk_check_button_new_with_label(_("Display errors in a dialog"));
 	gtk_box_pack_start(GTK_BOX(box),w,FALSE,FALSE,0);
-	gtk_toggle_button_set_state(GTK_TOGGLE_BUTTON(w), 
-				    tmpsetup.error_box);
+	gtk_toggle_button_set_active (GTK_TOGGLE_BUTTON (w), 
+				      tmpsetup.error_box);
 	g_signal_connect (G_OBJECT(w), "toggled",
 			  G_CALLBACK (optioncb),
 			  (gpointer)&tmpsetup.error_box);
 
 	w=gtk_check_button_new_with_label(_("Display information messages in a dialog"));
 	gtk_box_pack_start(GTK_BOX(box),w,FALSE,FALSE,0);
-	gtk_toggle_button_set_state(GTK_TOGGLE_BUTTON(w), 
-				    tmpsetup.info_box);
+	gtk_toggle_button_set_active (GTK_TOGGLE_BUTTON (w), 
+				      tmpsetup.info_box);
 	g_signal_connect (G_OBJECT (w), "toggled",
 			  G_CALLBACK (optioncb),
 			  (gpointer)&tmpsetup.info_box);
@@ -907,14 +909,14 @@ setup_calc(GtkWidget *widget, gpointer data)
 					   GTK_UPDATE_ALWAYS);
 	gtk_spin_button_set_snap_to_ticks(GTK_SPIN_BUTTON(w),
 					  TRUE);
-	gtk_widget_set_usize(w,80,0);
+	gtk_widget_set_size_request (w, 80, 0);
 	gtk_box_pack_start(GTK_BOX(b),w,FALSE,FALSE,0);
 	g_signal_connect (G_OBJECT (adj), "value_changed",
 			  G_CALLBACK (intspincb),&tmpstate.max_errors);
 
 
 	mainbox = gtk_vbox_new(FALSE, GNOME_PAD);
-	gtk_container_border_width(GTK_CONTAINER(mainbox),GNOME_PAD);
+	gtk_container_set_border_width(GTK_CONTAINER(mainbox),GNOME_PAD);
 	gtk_notebook_append_page (GTK_NOTEBOOK (notebook),
 				  mainbox,
 				  gtk_label_new(_("Precision")));
@@ -923,7 +925,7 @@ setup_calc(GtkWidget *widget, gpointer data)
 	frame=gtk_frame_new(_("Floating point precision"));
 	gtk_box_pack_start(GTK_BOX(mainbox),frame,FALSE,FALSE,0);
 	box=gtk_vbox_new(FALSE,GNOME_PAD);
-	gtk_container_border_width(GTK_CONTAINER(box),GNOME_PAD);
+	gtk_container_set_border_width(GTK_CONTAINER(box),GNOME_PAD);
 	gtk_container_add(GTK_CONTAINER(frame),box);
 	
 	gtk_box_pack_start(GTK_BOX(box), gtk_label_new(
@@ -950,14 +952,14 @@ setup_calc(GtkWidget *widget, gpointer data)
 					   GTK_UPDATE_ALWAYS);
 	gtk_spin_button_set_snap_to_ticks(GTK_SPIN_BUTTON(w),
 					  TRUE);
-	gtk_widget_set_usize(w,80,0);
+	gtk_widget_set_size_request (w, 80, 0);
 	gtk_box_pack_start(GTK_BOX(b),w,FALSE,FALSE,0);
 	g_signal_connect (G_OBJECT (adj), "value_changed",
 			  G_CALLBACK (intspincb), &tmpstate.float_prec);
 
 
 	mainbox = gtk_vbox_new(FALSE, GNOME_PAD);
-	gtk_container_border_width(GTK_CONTAINER(mainbox),GNOME_PAD);
+	gtk_container_set_border_width(GTK_CONTAINER(mainbox),GNOME_PAD);
 	gtk_notebook_append_page (GTK_NOTEBOOK (notebook),
 				  mainbox,
 				  gtk_label_new(_("Terminal")));
@@ -966,7 +968,7 @@ setup_calc(GtkWidget *widget, gpointer data)
 	frame=gtk_frame_new(_("Terminal options"));
 	gtk_box_pack_start(GTK_BOX(mainbox),frame,FALSE,FALSE,0);
 	box=gtk_vbox_new(FALSE,GNOME_PAD);
-	gtk_container_border_width(GTK_CONTAINER(box),GNOME_PAD);
+	gtk_container_set_border_width(GTK_CONTAINER(box),GNOME_PAD);
 	gtk_container_add(GTK_CONTAINER(frame),box);
 	
 	b=gtk_hbox_new(FALSE,GNOME_PAD);
@@ -986,7 +988,7 @@ setup_calc(GtkWidget *widget, gpointer data)
 					   GTK_UPDATE_ALWAYS);
 	gtk_spin_button_set_snap_to_ticks(GTK_SPIN_BUTTON(w),
 					  TRUE);
-	gtk_widget_set_usize(w,80,0);
+	gtk_widget_set_size_request (w, 80, 0);
 	gtk_box_pack_start(GTK_BOX(b),w,FALSE,FALSE,0);
 	g_signal_connect (G_OBJECT (adj), "value_changed",
 			  G_CALLBACK (intspincb), &tmpsetup.scrollback);
@@ -1125,7 +1127,7 @@ load_cb (GtkWidget *w)
 
 	fs = gtk_file_selection_new(_("Load GEL file"));
 	
-	gtk_window_position (GTK_WINDOW (fs), GTK_WIN_POS_MOUSE);
+	gtk_window_set_position (GTK_WINDOW (fs), GTK_WIN_POS_MOUSE);
 
 	g_signal_connect (G_OBJECT (fs), "destroy",
 			  G_CALLBACK (fs_destroy_cb), &fs);
@@ -1134,9 +1136,9 @@ load_cb (GtkWidget *w)
 			  "clicked", G_CALLBACK (really_load_cb),
 			  fs);
 
-	gtk_signal_connect_object (GTK_OBJECT (GTK_FILE_SELECTION (fs)->cancel_button),
-				   "clicked", GTK_SIGNAL_FUNC(gtk_widget_destroy),
-				   GTK_OBJECT(fs));
+	g_signal_connect_swapped (G_OBJECT (GTK_FILE_SELECTION (fs)->cancel_button),
+				  "clicked", G_CALLBACK (gtk_widget_destroy),
+				  fs);
 	if (last_dir != NULL)
 		gtk_file_selection_set_filename
 			(GTK_FILE_SELECTION (fs), last_dir);
@@ -1648,7 +1650,7 @@ open_callback (GtkWidget *w)
 
 	fs = gtk_file_selection_new(_("Open GEL file"));
 	
-	gtk_window_position (GTK_WINDOW (fs), GTK_WIN_POS_MOUSE);
+	gtk_window_set_position (GTK_WINDOW (fs), GTK_WIN_POS_MOUSE);
 
 	g_signal_connect (G_OBJECT (fs), "destroy",
 			  G_CALLBACK (fs_destroy_cb), &fs);
@@ -1657,9 +1659,9 @@ open_callback (GtkWidget *w)
 			  "clicked", G_CALLBACK (really_open_cb),
 			  fs);
 
-	gtk_signal_connect_object (GTK_OBJECT (GTK_FILE_SELECTION (fs)->cancel_button),
-				   "clicked", GTK_SIGNAL_FUNC(gtk_widget_destroy),
-				   GTK_OBJECT(fs));
+	g_signal_connect_swapped (G_OBJECT (GTK_FILE_SELECTION (fs)->cancel_button),
+				  "clicked", G_CALLBACK (gtk_widget_destroy),
+				  fs);
 	if (last_dir != NULL)
 		gtk_file_selection_set_filename
 			(GTK_FILE_SELECTION (fs), last_dir);
@@ -1804,7 +1806,7 @@ save_as_callback (GtkWidget *w)
 
 	fs = gtk_file_selection_new(_("Open GEL file"));
 	
-	gtk_window_position (GTK_WINDOW (fs), GTK_WIN_POS_MOUSE);
+	gtk_window_set_position (GTK_WINDOW (fs), GTK_WIN_POS_MOUSE);
 
 	g_signal_connect (G_OBJECT (fs), "destroy",
 			  G_CALLBACK (fs_destroy_cb), &fs);
@@ -1969,16 +1971,14 @@ run_program (GtkWidget *menu_item, gpointer data)
 
 /*main window creation, slightly copied from same-gnome:)*/
 static GtkWidget *
-create_main_window(void)
+create_main_window (void)
 {
 	GtkWidget *w;
-        w=gnome_app_new("gnome-genius", _("GENIUS Calculator"));
+        w = gnome_app_new("gnome-genius", _("GENIUS Calculator"));
 	gtk_window_set_wmclass (GTK_WINDOW (w), "gnome-genius", "gnome-genius");
-	gtk_window_set_policy (GTK_WINDOW (w), TRUE, FALSE, TRUE);
 
         g_signal_connect (G_OBJECT (w), "delete_event",
 			  G_CALLBACK (quitapp), NULL);
-        gtk_window_set_policy(GTK_WINDOW(w),1,1,0);
         return w;
 }
 
@@ -2046,14 +2046,21 @@ feed_to_zvt_from_string (const char *str, int size)
 	g_free(s);
 }
 
-static void
-feed_to_zvt (gpointer data, gint source, GdkInputCondition condition)
+static gboolean
+feed_to_zvt (GIOChannel *source, GIOCondition condition, gpointer data)
 {
-	int size;
-	char buf[256];
-	while ((size = read (source, buf, 256)) > 0) {
-		feed_to_zvt_from_string (buf, size);
+	if (condition & G_IO_IN) {
+		int fd = g_io_channel_unix_get_fd (source);
+		int size;
+		char buf[256];
+		while ((size = read (fd, buf, 256)) > 0 ||
+		       errno == EINTR) {
+			if (size > 0)
+				feed_to_zvt_from_string (buf, size);
+		}
 	}
+
+	return TRUE;
 }
 
 static void
@@ -2061,7 +2068,7 @@ output_notify_func (GelOutput *output)
 {
 	const char *s = gel_output_peek_string (output);
 	if (s != NULL) {
-		feed_to_zvt (NULL, forzvt[0], 0);
+		feed_to_zvt (forzvt0_ch, G_IO_IN, NULL);
 		feed_to_zvt_from_string ((char *)s, strlen (s));
 		gel_output_clear_string (output);
 	}
@@ -2182,22 +2189,36 @@ fork_a_helper (void)
 	g_free (foo);
 }
 
-static void
-get_new_line(gpointer data, gint source, GdkInputCondition condition)
+static gboolean
+get_new_line (GIOChannel *source, GIOCondition condition, gpointer data)
 {
+	int fd = g_io_channel_unix_get_fd (source);
+	int r;
 	char buf[5] = "EOF!";
 
-	if (read (source, buf, 4)==4) {
+	if ( ! (condition & G_IO_IN))
+		return TRUE;
+
+	do {
+		r = read (fd, buf, 4);
+	} while (errno == EINTR);
+	if (r == 4) {
 		if (strcmp (buf, "EOF!") == 0) {
 			get_cb_p_expression (NULL, torlfp);
-		} else if (strcmp(buf,"LINE")==0) {
+		} else if (strcmp (buf, "LINE") == 0) {
 			int len = 0;
-			if(read(source,(gpointer)&len,sizeof(int))!=sizeof(int))
+			do {
+				r = read (fd, (gpointer) &len, sizeof (int));
+			} while (errno == EINTR);
+			if (r != sizeof(int))
 				g_warning("Weird size from helper");
-			if(len>0) {
+			if (len > 0) {
 				char *b;
 				b = g_new0(char,len+1);
-				if(read(source,b,len)!=len)
+				do {
+					r = read (fd, b, len);
+				} while (errno == EINTR);
+				if (r != len)
 					g_warning ("Didn't get all the data from helper");
 				get_cb_p_expression (b, torlfp);
 				g_free(b);
@@ -2207,6 +2228,8 @@ get_new_line(gpointer data, gint source, GdkInputCondition condition)
 	} else {
 		g_warning("GOT a strange response from the helper");
 	}
+
+	return TRUE;
 }
 
 static void
@@ -2383,6 +2406,7 @@ main (int argc, char *argv[])
 	char *file;
 	GnomeUIInfo *plugins;
 	int plugin_count = 0;
+	GIOChannel *channel;
 	GnomeProgram *program;
 
 	genius_is_gui = TRUE;
@@ -2405,9 +2429,10 @@ main (int argc, char *argv[])
 	setup_rl_fifos ();
 
 	fcntl (forzvt[0], F_SETFL, O_NONBLOCK);
-	gdk_input_add (forzvt[0],
-		       GDK_INPUT_READ,
-		       feed_to_zvt, NULL);
+
+	forzvt0_ch = g_io_channel_unix_new (forzvt[0]);
+	g_io_add_watch_full (forzvt0_ch, G_PRIORITY_DEFAULT, G_IO_IN | G_IO_HUP | G_IO_ERR, 
+			     feed_to_zvt, NULL, NULL);
 
 	main_out = gel_output_new();
 	gel_output_setup_string (main_out, 80, get_term_width);
@@ -2516,7 +2541,7 @@ main (int argc, char *argv[])
 	/* FIXME:
 	gtk_widget_queue_resize (zvt);
 	*/
-	gtk_container_border_width(
+	gtk_container_set_border_width(
 		GTK_CONTAINER (GNOME_APP (genius_window)->contents), 5);
 
 	{
@@ -2565,8 +2590,11 @@ main (int argc, char *argv[])
 
 	fromrl = open (fromrlfifo, O_RDONLY);
 	g_assert (fromrl >= 0);
-	gdk_input_add (fromrl, GDK_INPUT_READ,
-		       get_new_line, NULL);
+
+	channel = g_io_channel_unix_new (fromrl);
+	g_io_add_watch_full (channel, G_PRIORITY_DEFAULT, G_IO_IN | G_IO_HUP | G_IO_ERR, 
+			     get_new_line, NULL, NULL);
+	g_io_channel_unref (channel);
 
 	/*init the context stack and clear out any stale dictionaries
 	  except the global one, if this is the first time called it
