@@ -1,3 +1,12 @@
+Tue Oct 07 15:08:52 2003  George Lebl <jirka@5z.com>
+
+	* configure.in: raise version
+
+	* configure.in, src/calc.c, src/compil.c, src/funclib.c,
+	  src/gnome-genius.c, src/graphing.c:  Whack use of
+	  all deprecated stuff.  Also make the graphing canvas
+	  use monospace 10 and not 12
+
 Tue Oct 07 10:04:59 2003  George Lebl <jirka@5z.com>
 
 	* configure.in, Makefile.am, src/Makefile.am, src/plugin.c,
